--- a/Start/01/index.html
+++ b/Start/01/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 
+<h1>Sajmon :) :D</h1>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.15/vue.js"></script>
+<script>
+
+</script>
 </body>
 </html>
