--- a/Start/15/index.html
+++ b/Start/15/index.html
@@ -23,7 +23,7 @@
 
             <h1>Formularz</h1>
 
-            <form action="#" class="form-horizontal" @submit.prevent="submit">
+            <form action="#" class="form-horizontal" :class="{ 'd-none': sent }" @submit.prevent="submit">
                 <div class="form-group">
                     <div class="col-2">
                         <label class="form-label">Imię</label>
@@ -42,11 +42,11 @@
                 </div>
 
                 <div class="col-5">
-                    <button class="btn btn-primary float-right" :disabled="isSending || sent">Wyślij</button>
+                    <button class="btn btn-primary float-right" :class="buttonStyles" :disabled="isSending || sent">Wyślij</button>
                 </div>
             </form>
 
-            <div class="toast">Twoja wiadomość została wysłana!</div>
+            <div class="toast" :class="{ 'd-none': !sent }">Twoja wiadomość została wysłana!</div>
 
         </div>
 
@@ -61,9 +61,18 @@
             isSending: false,
             sent: false
         },
+        computed: {
+            buttonStyles()  {
+                return { loading: this.isSending }
+            }
+        },
         methods: {
             submit: function(e) {
                 this.isSending = true;
+                setTimeout(() => {
+                    this.sent = !(this.isSending = false);
+                    console.log("timeout");
+                },500)
             }
         }
     });
