--- a/Start/27/index.html
+++ b/Start/27/index.html
@@ -83,7 +83,7 @@
                 {name: "pomarańczowy", value: "orange"},
             ],
             color: "",
-            terms: false
+            terms: true
         },
         methods: {
             submit: function(e) {
