--- a/Start/54/index.html
+++ b/Start/54/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Kurs Vue.js - Przykład 54</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.5.0/spectre.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.5.0/spectre-icons.min.css">
-    <style>
-        .container {
-            margin-top: 100px;
-            margin-bottom: 100px;
-        }
+  <meta charset="UTF-8">
+  <title>52</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.5.0/spectre.min.css">
+  <style>
+    .container {
+      margin-top: 100px;
+      margin-bottom: 100px;
+    }
 
-        [v-cloak] {
-            display: none;
-        }
-    </style>
+    [v-cloak] {
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
-    <div class="container grid-lg">
+<div class="container grid-lg">
 
-        <div id="app"></div>
+  <div id="app"></div>
 
-    </div>
+</div>
 
 </body>
 </html>
