--- a/Start/06/index.html
+++ b/Start/06/index.html
@@ -21,6 +21,7 @@
 
         <div id="app" v-cloak>
             <h1 v-text="fullName"></h1>
+            <a :href="url">{{url}}</a>
         </div>
 
     </div>
@@ -32,7 +33,8 @@
         el: "#app",
         data: {
             firstName: "Jan",
-            lastName: "Kowalski"
+            lastName: "Kowalski",
+            url: "http://spoko.oko"
         },
         computed: {
             fullName: function() {
