--- a/Start/20/index.html
+++ b/Start/20/index.html
@@ -21,26 +21,37 @@
 
         <div id="app" v-cloak>
 
-            <h1>Użytkownicy</h1>
+            <template v-if="users.length">
 
-            <table class="table table-striped table-hover" v-if="users.length">
-                <thead>
-                    <tr>
-                        <th>Lp.</th>
-                        <th>Imię i nazwisko</th>
-                        <th>Wiek</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="(user, index) in users" @click="remove(index)">
-                        <td>{{ index + 1 }}.</td>
-                        <td>{{ user.firstName }} {{ user.lastName }}</td>
-                        <td>{{ user.age }}</td>
-                    </tr>
-                </tbody>
-            </table>
+                <h1>Users</h1>
+
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name and Surname</th>
+                            <th>Age</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="(user, index) in users" @click="remove(index)">
+                            <td>{{ index + 1 }}.</td>
+                            <td>{{ user.firstName }} {{ user.lastName }}</td>
+                            <td>{{ user.age }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </template>
 
             <div class="toast" v-else>Brak danych do wyświetlenia.</div>
+
+            <dl>
+                <template v-for="user in users">
+                    <dt>Name</dt>
+                    <dd>{{user.firstName}} {{user.lastName}}</dd>
+                </template>
+            </dl>
 
         </div>
 
