--- a/Start/21/index.html
+++ b/Start/21/index.html
@@ -21,13 +21,13 @@
 
         <div id="app" v-cloak>
 
-            <div class="toast toast-primary text-center">Wciśnij <strong>Start</strong>, aby rozpocząć odliczanie.</div>
+            <div v-show="counter === 100" class="toast toast-primary text-center">Wciśnij <strong>Start</strong>, aby rozpocząć odliczanie.</div>
 
             <br>
 
             <div class="text-center">
-                <h1>{{ counter }}</h1>
-                <button class="btn btn-primary">Start</button>
+                <h1 :style="counterStyle">{{ counter }}</h1>
+                <button class="btn btn-primary" :disabled="counter !== 100" @click="start">Start</button>
             </div>
 
         </div>
@@ -40,10 +40,25 @@
     new Vue({
         el: "#app",
         data: {
-            counter: 10
+            counter: 100
+        },
+        computed: {
+            counterStyle() {
+                return { 'color': `rgb(${255-Math.floor(255*this.counter/100)},0,0)` };
+            }
         },
         methods: {
+            start() {
 
+                this.counter--;
+
+                let interval = setInterval(() => {
+                    if(this.counter-- === 0) {
+                        this.counter = 100;
+                        clearInterval(interval);
+                    }
+                },30)
+            },
         }
     });
 
