--- a/Start/22/index.html
+++ b/Start/22/index.html
@@ -29,7 +29,7 @@
                         <label class="form-label">Imię</label>
                     </div>
                     <div class="col-3">
-                        <input class="form-input" type="text" placeholder="Podaj swoje imię">
+                        <input class="form-input" type="text" placeholder="Podaj swoje imię" ref="firstName">
                     </div>
                 </div>
                 <div class="form-group">
@@ -37,7 +37,7 @@
                         <label class="form-label">Nazwisko</label>
                     </div>
                     <div class="col-3">
-                        <input class="form-input" type="text" placeholder="Podaj swoje nazwisko">
+                        <input class="form-input" type="text" placeholder="Podaj swoje nazwisko" ref="lastName">
                     </div>
                 </div>
 
@@ -47,6 +47,20 @@
             </form>
 
             <p>Twoje dane: {{ fullName }}</p>
+
+
+        </div>
+
+        <br><br>
+
+
+        <div id="player">
+
+            <h1>Player</h1>
+
+            <video class="video-responsive" controls loop src="http://code.eduweb.pl/kurs-vue/media/video.mp4" ref="video"></video>
+            <br>
+            <button class="btn btn-primary" v-text="isPlaying ? 'Pause' : 'Play'" @click="playPause"></button>
 
         </div>
 
@@ -62,10 +76,29 @@
         },
         methods: {
             submit: function(e) {
-
+                this.fullName =this.$refs.firstName.value + " " + this.$refs.lastName.value
             }
         }
     });
+
+    new Vue({
+        el: '#player',
+        data: {
+            isPlaying: false
+        },
+        methods: {
+            playPause() {
+                console.log("playPause");
+                if(this.isPlaying) {
+                    this.$refs.video.pause();
+                } else {
+                    this.$refs.video.play();
+                }
+                this.isPlaying = !this.isPlaying;
+
+            }
+        }
+    })
 
 </script>
 </body>
