--- a/Start/23/index.html
+++ b/Start/23/index.html
@@ -29,7 +29,7 @@
                         <label class="form-label">Imię</label>
                     </div>
                     <div class="col-3">
-                        <input class="form-input" type="text" placeholder="Podaj swoje imię">
+                        <input class="form-input" type="text" placeholder="Podaj swoje imię" v-model.trim.lazy="firstName">
                     </div>
                 </div>
                 <div class="form-group">
@@ -37,7 +37,7 @@
                         <label class="form-label">Nazwisko</label>
                     </div>
                     <div class="col-3">
-                        <input class="form-input" type="text" placeholder="Podaj swoje nazwisko">
+                        <input class="form-input" type="text" placeholder="Podaj swoje nazwisko" v-model.trim="lastName">
                     </div>
                 </div>
                 <div class="form-group">
@@ -45,7 +45,7 @@
                         <label class="form-label">Wiek</label>
                     </div>
                     <div class="col-3">
-                        <input class="form-input" type="number" placeholder="Wiek">
+                        <input class="form-input" type="number" placeholder="Wiek" v-model.number="age">
                     </div>
                 </div>
 
