--- a/Start/46/index.html
+++ b/Start/46/index.html
@@ -13,6 +13,14 @@
         [v-cloak] {
             display: none;
         }
+
+        .fade-enter-active, .fade-leave-active {
+            transition: opacity 0.5s ease-in-out
+        }
+
+        .fade-enter, .fade-leave-to {
+            opacity: 0;
+        }
     </style>
 </head>
 <body>
@@ -23,6 +31,7 @@
 
             <h1>Użytkownicy</h1>
 
+            <transition name="fade" mode="out-in" appear>
             <table class="table table-striped table-hover" v-if="users.length">
                 <thead>
                     <tr>
@@ -41,6 +50,7 @@
             </table>
 
             <div class="toast" v-else>Brak danych do wyświetlenia.</div>
+            </transition>
 
         </div>
 
