--- a/Start/53/index.html
+++ b/Start/53/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Kurs Vue.js - Przykład 53</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.5.0/spectre.min.css">
-    <style>
-        .container {
-            margin-top: 100px;
-            margin-bottom: 100px;
-        }
-
-        [v-cloak] {
-            display: none;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="container grid-lg">
-
-        <div id="app"></div>
-
-    </div>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>53</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
